--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
 body {
     
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 body * {
@@ -82,10 +83,15 @@ body * {
   z-index: 1;
   transform: translateY(-50%);
 
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-    animation: slide-in 0.4s;
+animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 
@@ -160,14 +166,14 @@ footer {
     font-size: 14px;
 }
 
-/*media queries*/
+/* media queries */
 @media (min-width: 700px) {
 :root {
-    --bg-url: url(./assests/bg-desktop.jpg);
+    --bg-url: url(./assets/bg-desktop.jpg);
 }
 
     .light {
-        --bg-url: url(.assests/bg-desktop-light.jpg);
+        --bg-url: url(./assets/bg-desktop-light.jpg);
     }
 }
 
@@ -178,5 +184,14 @@ from {
 }
 to {
     left: 50%;
+}
+}
+
+@keyframes slide-back {
+from {
+    left: 50%;
+}
+to {
+    left: 0;
 }
 }
